Возможность оключения нового способа сортировки при запросах с группировкой и агрегацией

--- a/manifest.json
+++ b/manifest.json
@@ -45,7 +45,8 @@
 			"resources": [
 			"img/icon128.png",
 	    	"siemMonkey.css",
-			"customfilters.json"
+			"customfilters.json",
+			"xhr_override.js"
 			],
 			"matches": [
 				"*://*/*"
