Возможность задавать собственные названия полей при их отображении

--- a/manifest.json
+++ b/manifest.json
@@ -47,6 +47,7 @@
 			"img/icon128.png",
 	    	"siemMonkey.css",
 			"customfilters.json",
+			"fieldaliases.json",
 			"xhr_override.js"
 			],
 			"matches": [
