--- a/manifest.json
+++ b/manifest.json
@@ -33,7 +33,7 @@
 			 "update.popup.js",
 			 "processTree.popup.js",
 			 "script.js"],
-			"css": ["siemMonkey.css","libs/jquery-ui-1.12.1/jquery-ui.min.css"],
+			"css": ["siemMonkey.css","libs/jquery-ui-1.12.1/jquery-ui.min.monkey.css"],
 			"all_frames": true
         }
     ],
@@ -49,7 +49,7 @@
 			"customfilters.json",
 			"fieldaliases.json",
 			"xhr_override.js",
-			"libs/jquery-ui-1.12.1/jquery-ui.min.css"
+			"libs/jquery-ui-1.12.1/jquery-ui.min.monkey.css"
 			],
 			"matches": [
 				"*://*/*"
