--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
 			 "libs/jquery/jquery-3.5.1.min.js",
 			 "libs/jquery-ui-1.12.1/jquery-ui.min.js",
 			 "libs/d3.js/d3.v4.min.js",
-			 "libs/moment.js/moment-with-locales.js",
+			 "libs/monkey_date.js",
 			 "libs/underscore.js/underscore-min.js",
 			 "libs/textarea-helper.js/textarea-helper.js",
 			 "libs/ipaddr.js/ipaddr.min.js",
@@ -49,6 +49,7 @@
 			"customfilters.json",
 			"fieldaliases.json",
 			"xhr_override.js",
+			"web_accessible_resources.js",
 			"libs/jquery-ui-1.12.1/jquery-ui.min.monkey.css"
 			],
 			"matches": [
